--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -254,10 +254,9 @@ h5{
     text-align: right;
   }
   hr{
-    margin-left: 38%;
-    border-top: transparent;
-    border-right: transparent;
-    border-left: transparent;
-    border-bottom: 15px dotted  #A6C1B9;
-    width: 23%;
+    border: none;
+  height: 4px;
+  background-image: linear-gradient(to right, #FF00FF, #00FFFF, #FF00FF); /* Degradado retro */
+  box-shadow: 0 0 10px #00FFFF, 0 0 20px #FF00FF; /* Efecto de neón */
+  margin: 30px 0;
 } 
