--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -15,6 +15,27 @@ width: 100%;
 height: 100%;
 position: relative;
 }
+.veni{
+  display: flex;
+}
+.error{
+  text-align: center;
+  margin-bottom: 15px;
+  margin-top: -40px;
+  font-size: large;
+}
+.claro{
+  font-size: 8px;
+  font-variant: small-caps;
+  color: #e9d9d9;
+  height: 40px;
+  width: 55px; 
+  background-color: #4D6D63 ;
+  border-radius: 20px black ;
+  box-shadow: #4D6D63 5px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
 h1{
   width: 44%;
   display: inline-block;
@@ -227,15 +248,14 @@ h5{
     padding: 40px;
     text-align: center;
     outline: none;
-    cursor: pointer;
-    transition: 0,3s;
+   
   }
   .boton1{
   color: #f1e8e8;
     background:#4D6D63;
     padding: 10px;
     border: #D6E2DE 1px solid;
-    
+   
   }
   .boton2{
     color: #f1e8e8;
@@ -246,7 +266,10 @@ h5{
     }
   
 
-    .buy:hover{
+    .boton1:hover{
+      transform: scale(1.1);
+    }
+    .boton2:hover{
       transform: scale(1.1);
     }
       
