--- a/Css/estilos-retro.css
+++ b/Css/estilos-retro.css
@@ -235,7 +235,11 @@ h5{
     cursor: pointer;
     transition: all 0.2s ease;
 }
-button:active {
+.buy:active {
+    box-shadow: 0px 0px 0px #000000;
+    transform: translate(4px, 4px);
+}
+.afiliarse:active{
     box-shadow: 0px 0px 0px #000000;
     transform: translate(4px, 4px);
 }
@@ -243,7 +247,10 @@ button:active {
 .buy:hover{
     transform: scale(1.1);
   }
-
+  .afiliarse:hover{
+    transform: scale(1.1);
+  }
+  
 .controls placeholder{
     text-align: right;
   }
